pkgs/artifacts-cli/tests/cli/snapshots/tests__cli__command_tests__regenerate_all_scenarios.snap
---
source: tests/cli/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=trace"
    - regenerate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
    - "--all"
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup/backend.toml
    TMPDIR: /tmp/artifacts-cli
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
DEBUG: Running nix build on /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup
TRACE: /run/current-system/sw/bin/nix build --impure -I flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-cli/examples/bigger_setup --no-link --print-out-paths --expr 'let
TRACE:   system = "x86_64-linux";
TRACE:   filterAttrs =
TRACE:     pred: set:
TRACE:     builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));
TRACE:   flake = builtins.getFlake (toString <flake>);
TRACE:   pkgs = flake.inputs.nixpkgs.legacyPackages.${system};
TRACE:   nixosConfigurations = builtins.attrNames (
TRACE:     filterAttrs (
TRACE:       machine: configuration: builtins.hasAttr "artifacts" configuration.options
TRACE:     ) flake.nixosConfigurations
TRACE:   );
TRACE:   homeConfigurations =
TRACE:     let
TRACE:       hc = if builtins.hasAttr "homeConfigurations" flake then flake.homeConfigurations else { };
TRACE:     in
TRACE:     builtins.attrNames (
TRACE:       filterAttrs (user: configuration: builtins.hasAttr "artifacts" configuration.options) hc
TRACE:     );
TRACE:   nixos = map (name: {
TRACE:     machine = name;
TRACE:     artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.nixosConfigurations.${name}.config.artifacts) then
TRACE:         flake.nixosConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) nixosConfigurations;
TRACE:   home = map (name: {
TRACE:     user = name;
TRACE:     artifacts = flake.homeConfigurations.${name}.config.artifacts.store;
TRACE:     config =
TRACE:       if (builtins.hasAttr "config" flake.homeConfigurations.${name}.config.artifacts) then
TRACE:         flake.homeConfigurations.${name}.config.artifacts.config
TRACE:       else
TRACE:         { };
TRACE:   }) homeConfigurations;
TRACE:   make = { inherit nixos home; };
TRACE: in
TRACE: pkgs.writeText "test.json" (builtins.toJSON make)
TRACE: '
DEBUG: make config (pretty):
DEBUG: {
DEBUG:   "home": [],
DEBUG:   "nixos": [
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/[hash]-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/[hash]-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-one"
DEBUG:     },
DEBUG:     {
DEBUG:       "artifacts": {
DEBUG:         "artifact-one": {
DEBUG:           "files": {
DEBUG:             "first-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "first-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/first-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/[hash]-test_generator_one.sh",
DEBUG:           "name": "artifact-one",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         },
DEBUG:         "artifact-two": {
DEBUG:           "files": {
DEBUG:             "second-secret": {
DEBUG:               "group": "root",
DEBUG:               "mode": "0400",
DEBUG:               "name": "second-secret",
DEBUG:               "owner": "root",
DEBUG:               "path": "/run/secrets/second-secret"
DEBUG:             }
DEBUG:           },
DEBUG:           "generator": "/nix/store/[hash]-test_generator_two.sh",
DEBUG:           "name": "artifact-two",
DEBUG:           "prompts": {},
DEBUG:           "serialization": "test",
DEBUG:           "shared": false
DEBUG:         }
DEBUG:       },
DEBUG:       "config": {},
DEBUG:       "machine": "machine-two"
DEBUG:     }
DEBUG:   ]
DEBUG: }
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
⚡ machine-one/artifact-one
DEBUG: run bwrap with command /nix/store/[hash]-test_generator_one.sh/bin/test_generator_one.sh
TRACE: bwrap \
TRACE: --unshare-all \
TRACE: --unshare-user \
TRACE: --uid 1000 \
TRACE: --gid 1000 \
TRACE: --tmpfs / \
TRACE: --chdir / \
TRACE: --ro-bind /nix/store /nix/store \
TRACE: --tmpfs /usr/lib/systemd \
TRACE: --proc /proc \
TRACE: --dev /dev \
TRACE: --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one \
TRACE: --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one \
TRACE: --ro-bind /nix/store/[hash]-test_generator_one.sh/bin /nix/store/[hash]-test_generator_one.sh/bin \
TRACE: --ro-bind /bin /bin \
TRACE: --ro-bind /usr/bin /usr/bin \
TRACE: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd \
TRACE: -- /bin/sh /nix/store/[hash]-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-artifact-one
config=/tmp/artifacts-cli/config/config.json
machine=machine-one
artifact=artifact-one
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
⚡ machine-one/artifact-two
DEBUG: run bwrap with command /nix/store/[hash]-test_generator_two.sh/bin/test_generator_two.sh
TRACE: bwrap \
TRACE: --unshare-all \
TRACE: --unshare-user \
TRACE: --uid 1000 \
TRACE: --gid 1000 \
TRACE: --tmpfs / \
TRACE: --chdir / \
TRACE: --ro-bind /nix/store /nix/store \
TRACE: --tmpfs /usr/lib/systemd \
TRACE: --proc /proc \
TRACE: --dev /dev \
TRACE: --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two \
TRACE: --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two \
TRACE: --ro-bind /nix/store/[hash]-test_generator_two.sh/bin /nix/store/[hash]-test_generator_two.sh/bin \
TRACE: --ro-bind /bin /bin \
TRACE: --ro-bind /usr/bin /usr/bin \
TRACE: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd \
TRACE: -- /bin/sh /nix/store/[hash]-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-artifact-two
config=/tmp/artifacts-cli/config/config.json
machine=machine-one
artifact=artifact-two
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - first-secret => /run/secrets/first-secret owner=root group=root
⚡ machine-two/artifact-one
DEBUG: run bwrap with command /nix/store/[hash]-test_generator_one.sh/bin/test_generator_one.sh
TRACE: bwrap \
TRACE: --unshare-all \
TRACE: --unshare-user \
TRACE: --uid 1000 \
TRACE: --gid 1000 \
TRACE: --tmpfs / \
TRACE: --chdir / \
TRACE: --ro-bind /nix/store /nix/store \
TRACE: --tmpfs /usr/lib/systemd \
TRACE: --proc /proc \
TRACE: --dev /dev \
TRACE: --bind /tmp/artifacts-cli/prompt-artifact-one /tmp/artifacts-cli/prompt-artifact-one \
TRACE: --bind /tmp/artifacts-cli/out-artifact-one /tmp/artifacts-cli/out-artifact-one \
TRACE: --ro-bind /nix/store/[hash]-test_generator_one.sh/bin /nix/store/[hash]-test_generator_one.sh/bin \
TRACE: --ro-bind /bin /bin \
TRACE: --ro-bind /usr/bin /usr/bin \
TRACE: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-3029b01ac1f84b21.txt /etc/passwd \
TRACE: -- /bin/sh /nix/store/[hash]-test_generator_one.sh/bin/test_generator_one.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-artifact-one
config=/tmp/artifacts-cli/config/config.json
machine=machine-two
artifact=artifact-one
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-artifact-one/first-secret ===
one
=========================
[regenerate]
DEBUG:     files to produce -> 1 files
DEBUG:       - second-secret => /run/secrets/second-secret owner=root group=root
⚡ machine-two/artifact-two
DEBUG: run bwrap with command /nix/store/[hash]-test_generator_two.sh/bin/test_generator_two.sh
TRACE: bwrap \
TRACE: --unshare-all \
TRACE: --unshare-user \
TRACE: --uid 1000 \
TRACE: --gid 1000 \
TRACE: --tmpfs / \
TRACE: --chdir / \
TRACE: --ro-bind /nix/store /nix/store \
TRACE: --tmpfs /usr/lib/systemd \
TRACE: --proc /proc \
TRACE: --dev /dev \
TRACE: --bind /tmp/artifacts-cli/prompt-artifact-two /tmp/artifacts-cli/prompt-artifact-two \
TRACE: --bind /tmp/artifacts-cli/out-artifact-two /tmp/artifacts-cli/out-artifact-two \
TRACE: --ro-bind /nix/store/[hash]-test_generator_two.sh/bin /nix/store/[hash]-test_generator_two.sh/bin \
TRACE: --ro-bind /bin /bin \
TRACE: --ro-bind /usr/bin /usr/bin \
TRACE: --ro-bind /tmp/artifacts-cli/artifacts-cli-passwd-8e43491af6eee0ab.txt /etc/passwd \
TRACE: -- /bin/sh /nix/store/[hash]-test_generator_two.sh/bin/test_generator_two.sh
💾 serialize secrets
Environment variables:
out=/tmp/artifacts-cli/out-artifact-two
config=/tmp/artifacts-cli/config/config.json
machine=machine-two
artifact=artifact-two
username=
artifact_context=nixos
--- Begin /tmp/artifacts-cli/config/config.json ---
{}
--- End /tmp/artifacts-cli/config/config.json ---

=== Content of /tmp/artifacts-cli/out-artifact-two/second-secret ===
two
=========================

----- stderr -----
