pkgs/artifacts-cli/tests/cli/snapshots/tests__cli__command_tests__scenario_help.snap
---
source: tests/cli/command_tests.rs
info:
  program: artifacts
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
command line interafce to managing NixOS Artifacts

Usage: artifacts [OPTIONS] <COMMAND>

Commands:
  generate    Generate artifacts
  regenerate  Regenerate selected artifacts (or all)
  list        List all machines and artifacts defined by the flake
  tui         Launch interactive TUI for managing artifacts
  help        Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>  Set the logging level (error, warning, info, debug, trace) [default: info] [possible values: error, warning, info, debug, trace]
      --no-emoji               don't use emojis
  -h, --help                   Print help
  -V, --version                Print version

----- stderr -----
